<resources>
    <string name="app_name">ROM Control</string>
    <string name="user_interface">Interface</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="menu_main_activity_change_locale">Blank!</string>
    <string name="header_statusbar">Statusbar</string>
    <string name="header_navbar">Navigation Bar</string>
    <string name="toggles_layout">Toggles</string>
    <string name="general_ui">General UI</string>
    <string name="statusbar_notifications">Notifications</string>
    <string name="clock">Clock</string>
    <string name="battery">Battery</string>
    <string name="signal">Signal</string>
    <string name="nav_bar">Navigation Bar</string>
    <string name="power_menu">Power Menu</string>
    <string name="led_options">LED</string>
    <string name="spen_options">S Pen Gestures</string>
    <string name="header_system">System</string>
    <string name="sound">Sound</string>
    <string name="lockscreen_options">Lockscreen</string>
    <string name="title_ribbon">Ribbons</string>
    <string name="weather">Weather</string>
    <string name="tools">Tools</string>
    <string name="installer">Installer</string>
    <string name="active_display">Active Display</string>
    <string name="title_about">About IOKP</string>
    <string name="title_ui">General User Interface</string>
    <string name="title_statusbar_notifications">Notifications</string>
    <string name="title_statusbar_clock">Statusbar Clock</string>
    <string name="title_statusbar_toggles">Statusbar Toggles</string>
    <string name="title_statusbar_battery">Statusbar Battery</string>
    <string name="title_statusbar_signal">Statusbar Signal</string>
    <string name="title_navbar">Navigation Bar</string>
    <string name="title_navring">Navigation Ring</string>
    <string name="title_power_menu">Power Menu</string>
    <string name="title_led">LED Control</string>
    <string name="title_spen">S Pen Gestures</string>
    <string name="title_lockscreens">Lockscreen Options</string>
    <string name="title_lockscreens_targets">Lockscreen Targets</string>
    <string name="title_sound">Sound Settings</string>
    <string name="title_weather">Weather Settings</string>
    <string name="title_performance">Performance Settings</string>
    <string name="title_installer">Installer Settings</string>
    <string name="title_clipboard_share">Share to Clipboard</string>
    <string name="mgerrit_activity_name">mGerrit</string>
    <string name="ribbon_settings_title">Ribbons</string>
    <string name="title_hardware_keys">Hardware Keys</string>
    <string name="header_summary_clock">@null</string>
    <string name="header_summary_toggles">@null</string>
    <string name="header_summary_notifications">@null</string>
    <string name="header_summary_general_ui">@null</string>
    <string name="header_summary_battery">@null</string>
    <string name="header_summary_signal">@null</string>
    <string name="header_summary_navigation_bar">@null</string>
    <string name="header_summary_power_menu">@null</string>
    <string name="header_summary_led">@null</string>
    <string name="header_summary_spen">@null</string>
    <string name="header_summary_sound">@null</string>
    <string name="header_summary_performance">@null</string>
    <string name="header_summary_lockscreens">@null</string>
    <string name="header_summary_weather">@null</string>
    <string name="header_summary_vibrations">@null</string>
    <string name="ribbon_settings_summary">@null</string>
    <string name="header_summary_installer">@null</string>
    <string name="header_summary_hardware_keys">@null</string>
    <string name="header_summary_activedisplay">@null</string>
    <string name="menu_nav_bar_reset">Reset nav bar</string>
    <string name="menu_ribbon_reset">Reset ribbon</string>
    <string name="menu_ribbon_apps">Reset apps</string>
    <string name="menu_ribbon_rearrange">Rearrange ribbon</string>
    <string name="menu_ribbon_hide">Hide apps</string>
    <string name="menu_ribbon_toggles">Setup toggles</string>
    <string name="menu_ribbon_na">Not available</string>
    <string name="menu_ribbon_toggles_error">Toggles are only available for the left and right swipe ribbons.</string>
    <string name="menu_lockscreens_reset">Reset lockscreen wallpaper</string>
    <string name="enable_bootanimation_unlock">To Unlock: uncheck \"disable boot animation\"</string>
    <string name="enable_phone_or_phablet">To Unlock: enable phone or phablet \"UI mode\"</string>
    <string name="enable_tablet_ui">To Unlock: enable tablet \"UI mode\"</string>
    <string name="enable_noti_wallpaper">To Unlock: enable phone or phablet \"UI mode\" and set a
        \"notification background\"
    </string>
    <string name="enable_crt_mode">To Unlock: check \"CRT screen off\"</string>
    <string name="enable_menu_location">To Unlock: enable a \"menu location\"</string>
    <string name="enable_hiding_navbar">To Unlock: \"enable hidden NavBar\"</string>
    <string name="enable_hiding_systembar">To Unlock: \"enable hidden SystemBar\"</string>
    <string name="enable_audio_mode">To Unlock: enable \"face down audio mode\"</string>
    <string name="enable_battery_bar">To Unlock: enable a \"battery bar location\"</string>
    <string name="enable_clock_location">To Unlock: enable a \"clock style\"</string>
    <string name="enable_signal_text">To Unlock: set \"signal indicator style\" to display text or dBm</string>
    <string name="enable_wifi_text">To Unlock: set \"WiFi signal indicator style\" to display text</string>
    <string name="enable_toggle_tiles">To Unlock: set \"toggle style\" to tiles</string>
    <string name="enable_fasttoggle">To Unlock: \"enable fast toggle\" and tiles \"toggle style\"</string>
    <string name="enable_favorite_toggle">To Unlock: enable a \"favorite contact\" toggle here or in a Ribbon</string>
    <string name="enable_screenshot_toggle">To Unlock: enable a \"screenshot\" toggle here or in a Ribbon</string>
    <string name="enable_custom_toggle">To Unlock: enable a \"custom\" toggle here or in a Ribbon</string>
    <string name="enable_spen_gestures">To Unlock: \"enable S Pen gestures\" </string>
    <string name="enable_persist_installer">To Unlock: \"enable persistence\"</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="custom_app_icon_successfully">"'s icon set successfully!"</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="title_show_power_saver">Power Saver</string>
    <string name="title_show_screenshot">Screenshot</string>
    <string name="title_show_torch_toggle">Torch</string>
    <string name="title_show_airplane_toggle">Airplane mode</string>
    <string name="title_show_navbar_hide">System Bar toggles</string>
    <string name="title_show_volume_state_toggle">Volume states</string>
    <string name="title_show_reboot_keyguard">Lockscreen reboot</string>
    <string name="spen_left_title">Action on swipe left</string>
    <string name="spen_right_title">Action on swipe right</string>
    <string name="spen_up_title">Action on swipe up</string>
    <string name="spen_down_title">Action on swipe down</string>
    <string name="spen_double_title">Action on double tap</string>
    <string name="spen_long_title">Action on longpress</string>
    <string name="spen_enable">Enable S Pen Gestures</string>
    <string name="spen_enable_summary">Set custom actions for S Pen gestures</string>
    <string name="spen_extras_cat">S Pen extras</string>
    <string name="spen_gestures_cat">S Pen Gestures</string>
    <string name="enable_stylus_pointer_title">Enable S Pen pointer</string>
    <string name="enable_stylus_pointer_summary">Enable the mouse icon when using the S Pen</string>
    <string name="persist_options">Persistence</string>
    <string name="persist_enable">Enable Persistence</string>
    <string name="persist_enable_summary">Enable data to persist across installs</string>
    <string name="persist_prop_density">Persist Density</string>
    <string name="persist_prop_density_summary">Persist LCD density</string>
    <string name="persist_file_hosts">Persist Hosts</string>
    <string name="persist_file_hosts_summary">Persist hosts file</string>
    <string name="persist_file_xposed">Persist Xposed</string>
    <string name="persist_file_xposed_summary">Persist file app_process for Xposed framework</string>
    <string name="persist_file_xposed_notinstalled">XposedInstaller is not installed</string>
    <string name="title_pref_powersaving_pref_mode">Enable power saver</string>
    <string name="summary_pref_powersaving_pref_mode">@null</string>
    <string name="title_pref_powersaving_data_screen_off">Screen off data action</string>
    <string name="summary_pref_powersaving_data_screen_off">What to do with the data when the screen turns off</string>
    <string name="title_pref_powersaving_data_screen_off_delay">Data action delay</string>
    <string name="devs">The Crew</string>
    <string name="iokp">Infamous Open Kang Project</string>
    <string name="iokp_website_title">IOKP Website</string>
    <string name="iokp_website_summary">InfamousDevelopment.com/</string>
    <string name="iokp_download_title">IOKP Downloads</string>
    <string name="iokp_download_summary">Androidfilehost.com</string>
    <string name="iokp_changelog_title">Change Log</string>
    <string name="iokp_changelog_summary">Link to thread</string>
    <string name="donate_iokp">http://goo.gl/V01Vqx
    </string>
    <string name="github_iokp">https://github.com/IOKP</string>
    <string name="github_midnightRider67">https://github.com/MidnightRider67</string>
    <string name="github_djmatt604">https://github.com/djmatt604</string>
    <string name="github_octane70">https://github.com/Octane70</string>
    <string name="github_mgbotoe">https://github.com/mgbotoe</string>
    <string name="github_jamison904">https://github.com/jamison904</string>
    <string name="github_mrimp">https://github.com/mrimp</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display number of pending notifications in the Statusbar</string>
    <string name="vibrate_notif_expand_title">Vibrate on expand</string>
    <string name="vibrate_notif_expand_summary">Vibrate when expanding notifications (requires UI restart)</string>
    <string name="notification_wallpaper_title">Notification background</string>
    <string name="notif_wallpaper_alpha_title">Notification background alpha</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="ime_switcher_title">Show IME Switcher</string>
    <string name="ime_switcher_summary">In Statusbar while typing</string>
    <string name="brightness_slider_title">Statusbar brightness slider</string>
    <string name="brightness_slider_summary">When enabled, this option will allow you to change the brightness by
        sliding your finger across the Statusbar. Note: Will not be active when auto-brightness is on
    </string>
    <string name="statusbar_hide_title">Hide Statusbar</string>
    <string name="statusbar_hide_summary">Checking this completely hides the Statusbar</string>
    <string name="auto_hide_statusbar">Auto Hide statusbar</string>
    <string name="auto_hide_statusbar_summary">Statusbar hides itself when there are no notifications</string>
    <string name="statusbar_quick_peek_title">Quick Peek</string>
    <string name="statusbar_quick_peek_summary">Peek at statusbar by swiping from top edge of screen</string>
    <string name="statusbar_swipe_timeout_title">Statusbar timeout</string>
    <string name="statusbar_swipe_timeout_summary">Timeout for showing the statusbar</string>
</resources>